force-app/main/default/objects/Case/fields/Acc_Selection_flow_visibility__c.field-meta.xml
<CustomField>
    <fullName>Acc_Selection_flow_visibility__c</fullName>
    <formula>AND(
ISBLANK(Organization__c),
 NOT(ISBLANK( Organization_Contact__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc Selection flow visibility</label>
    <type>Checkbox</type>
</CustomField>