force-app/main/default/objects/Case/fields/Account_Connection__c.field-meta.xml
<CustomField>
    <fullName>Account_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account Connection record related to the Case. Used for OS Onboarding Cases and Production Support</description>
    <inlineHelpText>The Account Connection record related to the Case. Used for OS Onboarding Cases and Production Support</inlineHelpText>
    <label>Account Connection</label>
    <referenceTo>Account_Connection__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>