force-app/main/default/objects/Case/fields/Account_ISR_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_ISR_Email_Address__c</fullName>
    <description>Stores the ISR Email tied to the Account.</description>
    <inlineHelpText>Stores the ISR Email tied to the Account.</inlineHelpText>
    <label>Account ISR Email Address</label>
    <type>Email</type>
</CustomField>