force-app/main/default/objects/Case/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Custom Field to be used for JIRA integration</description>
    <formula>Account.Name</formula>
    <inlineHelpText>Custom Field to be used for JIRA integration</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>