force-app/main/default/objects/Case/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Account.Owner_Detail__r.FirstName &amp; &quot; &quot; &amp; Account.Owner_Detail__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>