force-app/main/default/objects/Case/fields/Account_SAE_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_SAE_Email_Address__c</fullName>
    <description>The Email Address of the SAE on the Account (for the Walmart BD project)</description>
    <inlineHelpText>The Email Address of the SAE on the Account (for the Walmart BD project)</inlineHelpText>
    <label>Account SAE Email Address</label>
    <type>Email</type>
</CustomField>