force-app/main/default/objects/Case/fields/Account_Tier_Icon__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier_Icon__c</fullName>
    <description>Shows icon indicating Account Tier</description>
    <formula>IF( TEXT(Account.ServiceTier__c) = &apos;Diamond&apos;,
IMAGE(&quot;/resource/1520363536000/DiamondIcon&quot;, &quot;A&quot;),
IF( TEXT(Account.ServiceTier__c) = &apos;Platinum&apos;,
IMAGE(&quot;/resource/1520363536000/DiamondIcon&quot;, &quot;A&quot;),
IF( TEXT(Account.ServiceTier__c) = &apos;Gold&apos;,
IMAGE(&quot;/resource/1520363536000/GoldIcon&quot;, &quot;B&quot;),
IF( TEXT(Account.ServiceTier__c) = &apos;Silver&apos;,
IMAGE(&quot;/resource/1520363536000/SilverIcon&quot;, &quot;C&quot;),
IF( TEXT(Account.ServiceTier__c) = &apos;Bronze&apos;,
IMAGE(&quot;/resource/1520363536000/BronzeIcon&quot;, &quot;D&quot;),
IF( TEXT(Account.ServiceTier__c) = &apos;Coal&apos;,
IMAGE(&quot;/resource/1520363536000/CoalIcon&quot;, &quot;E&quot;),
TEXT(Account.ServiceTier__c)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tier Icon</label>
    <type>Text</type>
</CustomField>