force-app/main/default/objects/Case/fields/Account_Url__c.field-meta.xml
<CustomField>
    <fullName>Account_Url__c</fullName>
    <label>Account Url</label>
    <type>Url</type>
</CustomField>