force-app/main/default/objects/Case/fields/Accountability__c.field-meta.xml
<CustomField>
    <fullName>Accountability__c</fullName>
    <label>Accountability</label>
    <length>250</length>
    <type>Text</type>
</CustomField>