force-app/main/default/objects/Case/fields/Active_Providers__c.field-meta.xml
<CustomField>
    <fullName>Active_Providers__c</fullName>
    <label>Active Providers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Ask.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>