force-app/main/default/objects/Case/fields/Active_Recurring_Case__c.field-meta.xml
<CustomField>
    <fullName>Active_Recurring_Case__c</fullName>
    <formula>AND(
ISNULL(Recurring_Case_Shut_Off_Date__c ), 
 NOT(ISPICKVAL(Recurring_Case_Rate__c,&quot;&quot;)))

|| 
AND( 
Recurring_Case_Shut_Off_Date__c   &gt;  TODAY(),
NOT(ISPICKVAL(Recurring_Case_Rate__c,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks to see if the recurring case&apos;s shutdown date is earlier than today; if so, the recurring case is &quot;Active.&quot;</inlineHelpText>
    <label>Active Recurring Case</label>
    <type>Checkbox</type>
</CustomField>