force-app/main/default/objects/Case/fields/Actual_Completion_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Cost__c</fullName>
    <label>Actual Completion Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>