force-app/main/default/objects/Case/fields/Actual_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Project_Hours__c</fullName>
    <label>Actual Project Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>