force-app/main/default/objects/Case/fields/Additional_Business_Unites_Affected__c.field-meta.xml
<CustomField>
    <fullName>Additional_Business_Unites_Affected__c</fullName>
    <label>Additional Business Units Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adminstration</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Sales - AU</fullName>
            </value>
            <value>
                <fullName>Sales - UK</fullName>
            </value>
            <value>
                <fullName>Sales - US Central</fullName>
            </value>
            <value>
                <fullName>Sales - US East</fullName>
            </value>
            <value>
                <fullName>Sales - US West</fullName>
            </value>
            <value>
                <fullName>SLT</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>