force-app/main/default/objects/Case/fields/Additional_Defects__c.field-meta.xml
<CustomField>
    <fullName>Additional_Defects__c</fullName>
    <description>Field for additional Jira tickets and HD tickets.</description>
    <label>Additional Defects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>