force-app/main/default/objects/Case/fields/Additional_To_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Additional_To_Email_Addresses__c</fullName>
    <description>Email address copied to Additional To: field when Send an Email custom button is clicked on a case.</description>
    <inlineHelpText>Enter email address separated by a semicolon.</inlineHelpText>
    <label>Additional To: Email Addresses</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>