force-app/main/default/objects/Case/fields/Age_of_Case_days__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Case_days__c</fullName>
    <description>status not equal to close and no date entered</description>
    <formula>IF(
  AND(ISNULL(Date_First_Closed__c),IsClosed = FALSE) ,
  NOW() - CreatedDate ,

IF(
  AND(ISNULL(Date_First_Closed__c),IsClosed = TRUE),
  ClosedDate - CreatedDate,

IF(
  AND(NOT(ISNULL(Date_First_Closed__c)),IsClosed = FALSE),
  (Date_First_Closed__c - DATEVALUE (CreatedDate)) + (TODAY() - IF(ISNULL(Date_Reopened__c ),TODAY(),Date_Reopened__c)),

  (Date_First_Closed__c - DATEVALUE (CreatedDate)) + (DATEVALUE (ClosedDate) - IF(ISNULL(Date_Reopened__c ),DATEVALUE (ClosedDate),Date_Reopened__c))

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Case (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>