force-app/main/default/objects/Case/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>IF( TEXT(Account.Account_Status__c ) = &quot;Active - Agency&quot; || TEXT(Account.Account_Status__c ) = &quot;GSI Customer&quot; ||  TEXT(Account.Type ) = &quot;Agency&quot; || NOT(ISBLANK( Account.ParentId )), &quot;Yes&quot;,&quot;No&quot;)</formula>
    <inlineHelpText>If Account Status is &quot;Active - Agency&quot; or &quot;GSI Customer&quot;, or Type is &quot;Agency&quot;, or if there&apos;s a Parent Account, then this will be &quot;Yes&quot;.  This field will be used for determining whether Terminations are necessary when terminating Posting Accounts.</inlineHelpText>
    <label>Agency?</label>
    <type>Text</type>
</CustomField>