force-app/main/default/objects/Case/fields/AI_Issue__c.field-meta.xml
<CustomField>
    <fullName>AI_Issue__c</fullName>
    <label>AI Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>