force-app/main/default/objects/Case/fields/AI_Resolution__c.field-meta.xml
<CustomField>
    <fullName>AI_Resolution__c</fullName>
    <label>AI Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>