force-app/main/default/objects/Case/fields/AM_Tier__c.field-meta.xml
<CustomField>
    <fullName>AM_Tier__c</fullName>
    <formula>CASE(Account.ServiceTier__c, 
&quot;Diamond&quot;, &quot;Diamond&quot;, 
&quot;Platinum&quot;, &quot;Platinum&quot;,
&quot;Gold&quot;, &quot;Gold&quot;,
&quot;Silver&quot;, &quot;Silver&quot;,
&quot;Bronze&quot;, &quot;Bronze&quot;,
&quot;Coal&quot;, &quot;Coal&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Tier</label>
    <type>Text</type>
</CustomField>