force-app/main/default/objects/Case/fields/Amazon_Customer_Rating_Count__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Customer_Rating_Count__c</fullName>
    <description>As entered from BD Referral Program form.</description>
    <label>Amazon Customer Rating Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>