force-app/main/default/objects/Case/fields/Amazon_Seller_URL__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Seller_URL__c</fullName>
    <description>URL as submitted from BD Referral Program form.</description>
    <label>Amazon Seller URL</label>
    <type>Url</type>
</CustomField>