force-app/main/default/objects/Case/fields/Annual_Company_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Company_Revenue__c</fullName>
    <description>Revenue amount submitted by customer/partner from BD Referral Program form.</description>
    <label>Annual Company Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>