force-app/main/default/objects/Case/fields/Approved_for_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Marketplace__c</fullName>
    <description>Selected on BD Referral Program form.</description>
    <label>Approved to sell on the marketplace?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>