force-app/main/default/objects/Case/fields/Approver_Record_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approver_Record_Needed__c</fullName>
    <inlineHelpText>Will this person need to approve quotes? If Yes, create an approver record for them. If you are not sure, check with the team.</inlineHelpText>
    <label>Approver Record Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>