force-app/main/default/objects/Case/fields/Asset_Current_Agreement_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Asset_Current_Agreement_Subscription_Fee__c</fullName>
    <description>The &quot;Current Agreement Subscription Fee&quot; from the Asset in the Asset field</description>
    <formula>Asset.Current_Agreement_Subscription_Fee__c</formula>
    <inlineHelpText>The &quot;Current Agreement Subscription Fee&quot; from the Asset in the Asset field</inlineHelpText>
    <label>Asset Current Agreement Subscription Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>