force-app/main/default/objects/Case/fields/Asset_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Renewal_Date__c</fullName>
    <description>To assist Renewal Admins when creating renewal opportunities on Renewal Admin cases</description>
    <inlineHelpText>The date the assets are scheduled to renew</inlineHelpText>
    <label>Asset Renewal Date</label>
    <type>Date</type>
</CustomField>