force-app/main/default/objects/Case/fields/Assigned_Resources__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resources__c</fullName>
    <label>Assigned Resources</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>