force-app/main/default/objects/Case/fields/Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Id__c</fullName>
    <label>Assignee Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>