force-app/main/default/objects/Case/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>