force-app/main/default/objects/Case/fields/ATEAM_Issue_Source__c.field-meta.xml
<CustomField>
    <fullName>ATEAM_Issue_Source__c</fullName>
    <description>For Jira integrations.  Info sync&apos;d from Jira to this field.</description>
    <label>ATEAM Issue Source</label>
    <length>150</length>
    <type>Text</type>
</CustomField>