force-app/main/default/objects/Case/fields/Auction_ID__c.field-meta.xml
<CustomField>
    <fullName>Auction_ID__c</fullName>
    <description>Captures the Auction ID for a checkout case</description>
    <label>Auction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>