force-app/main/default/objects/Case/fields/Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Audit_Type__c</fullName>
    <label>Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic Audit</fullName>
            </value>
            <value>
                <fullName>Advanced Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>