force-app/main/default/objects/Case/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Renewal Admin to indicate if the Renewal Product is Auto Renew</description>
    <inlineHelpText>Used by the Renewal Admin to indicate if the Renewal Product is Auto Renew</inlineHelpText>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>