force-app/main/default/objects/Case/fields/Average_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Selling_Price__c</fullName>
    <description>ASP as submitted via BD Referral Program form.</description>
    <label>Average Selling Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>