force-app/main/default/objects/Case/fields/BCC_Client__c.field-meta.xml
<CustomField>
    <fullName>BCC_Client__c</fullName>
    <description>Used for reporting and out-going e-mail templates</description>
    <label>BCC Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ritz Camera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>