force-app/main/default/objects/Case/fields/Billing_City_SCON__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_SCON__c</fullName>
    <label>Billing City (SCON)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>