force-app/main/default/objects/Case/fields/Billing_Country_SCON__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_SCON__c</fullName>
    <label>Billing Country (SCON)</label>
    <length>55</length>
    <type>Text</type>
</CustomField>