force-app/main/default/objects/Case/fields/Billing_Postal_Code_SCON__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code_SCON__c</fullName>
    <label>Billing Postal Code (SCON)</label>
    <length>55</length>
    <type>Text</type>
</CustomField>