force-app/main/default/objects/Case/fields/Billing_State_SCON__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_SCON__c</fullName>
    <label>Billing State (SCON)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>