force-app/main/default/objects/Case/fields/Billing_Street_Address_SCON__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Address_SCON__c</fullName>
    <label>Billing Street Address (SCON)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>