force-app/main/default/objects/Case/fields/Block_Jira_Updates__c.field-meta.xml
<CustomField>
    <fullName>Block_Jira_Updates__c</fullName>
    <label>Block Jira Updates</label>
    <type>Picklist</type>
    <description>If marked as &quot;Yes&quot; it will block updates from the Jira integration from occurring. Used by the Brands team</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>