force-app/main/default/objects/Case/fields/Business_Analyst_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Analyst_Hours__c</fullName>
    <label>Business Analyst Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>