force-app/main/default/objects/Case/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <label>Business Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>