force-app/main/default/objects/Case/fields/Business_Critical__c.field-meta.xml
<CustomField>
    <fullName>Business_Critical__c</fullName>
    <label>Business Critical</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>