force-app/main/default/objects/Case/fields/Business_Ops_Group_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Business_Ops_Group_Ownership__c</fullName>
    <label>Business Ops Group Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>CRM Advantage (Brian Bell)</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Level 1</fullName>
                <default>true</default>
                <label>Level 1</label>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>