force-app/main/default/objects/Case/fields/Business_Unite_Requested_For__c.field-meta.xml
<CustomField>
    <fullName>Business_Unite_Requested_For__c</fullName>
    <label>Business Unit Requested For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales - US Strat</fullName>
            </value>
            <value>
                <fullName>Sales - US Core</fullName>
            </value>
            <value>
                <fullName>Sales - EMEA Core</fullName>
            </value>
            <value>
                <fullName>Sales - EMEA Strat</fullName>
            </value>
            <value>
                <fullName>Sales - APAC</fullName>
            </value>
            <value>
                <fullName>Sales - Business Development</fullName>
            </value>
            <value>
                <fullName>Sales - CH</fullName>
            </value>
            <value>
                <fullName>Sales Engineering</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Business Operations</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>