force-app/main/default/objects/Case/fields/Bypass_VR_for_Flow__c.field-meta.xml
<CustomField>
    <fullName>Bypass_VR_for_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass VR for Flow</label>
    <type>Checkbox</type>
</CustomField>