force-app/main/default/objects/Case/fields/Callback_Phone__c.field-meta.xml
<CustomField>
    <fullName>Callback_Phone__c</fullName>
    <label>Callback Phone</label>
    <type>Phone</type>
</CustomField>