force-app/main/default/objects/Case/fields/Case_Ace__c.field-meta.xml
<CustomField>
    <fullName>Case_Ace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to nominate this case for a &quot;Case Ace&quot; award.</description>
    <inlineHelpText>Check to nominate this case for a &quot;Case Ace&quot; award.</inlineHelpText>
    <label>Case Ace</label>
    <type>Checkbox</type>
</CustomField>