force-app/main/default/objects/Case/fields/Case_Age_Opened_until_Now_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Opened_until_Now_Hours__c</fullName>
    <formula>(NOW() - CreatedDate)*24</formula>
    <inlineHelpText>True case age (number of hours it has been since case was created)</inlineHelpText>
    <label>Case Age (Opened until Now) Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>