force-app/main/default/objects/Case/fields/Case_Classification__c.field-meta.xml
<CustomField>
    <fullName>Case_Classification__c</fullName>
    <label>Case Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Error Resolution</fullName>
            </value>
            <value>
                <fullName>Mapping and Optimization</fullName>
            </value>
            <value>
                <fullName>Promotion Management</fullName>
            </value>
            <value>
                <fullName>Catalog Management</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Call Support</fullName>
            </value>
            <value>
                <fullName>Solutions Architecture</fullName>
            </value>
            <value>
                <fullName>CSE Engagement</fullName>
            </value>
            <value>
                <fullName>OOO</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Image Reformatting</fullName>
            </value>
            <value>
                <fullName>PID Migration</fullName>
            </value>
            <value>
                <fullName>Platform Integration Modifications</fullName>
            </value>
            <value>
                <fullName>Outbound Mapping Modifications</fullName>
            </value>
            <value>
                <fullName>Marketplace Strategy</fullName>
            </value>
            <value>
                <fullName>Platform Strategy</fullName>
            </value>
            <value>
                <fullName>EMEA Ent MS OOO</fullName>
                <isActive>false</isActive>
                <label>EMEA Ent MS OOO</label>
            </value>
            <value>
                <fullName>EMEA Strat MS OOO</fullName>
                <isActive>false</isActive>
                <label>EMEA Strat MS OOO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>