force-app/main/default/objects/Case/fields/Case_Closed_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_On_Time__c</fullName>
    <formula>AND(
 IsClosed , 

DATEVALUE(ClosedDate ) &lt;=  Project_Due_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Looks at project due date and closed date to determine if the case was closed on time</inlineHelpText>
    <label>Case Closed On Time</label>
    <type>Checkbox</type>
</CustomField>